--- a/app/src/main/res/layout/activity_topics_view.xml
+++ b/app/src/main/res/layout/activity_topics_view.xml
@@ -24,6 +24,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="25dp"
         android:clickable="true"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add" />
