--- a/app/src/main/res/layout/recyclerview_adapter_question_simple.xml
+++ b/app/src/main/res/layout/recyclerview_adapter_question_simple.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txt_description"
+        android:id="@+id/txt_answer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2pt"
@@ -53,7 +53,7 @@
         android:layout_height="1pt"
         android:layout_marginTop="7dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/txt_description"
+        app:layout_constraintTop_toBottomOf="@+id/txt_answer"
         tools:layout_editor_absoluteX="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
