Can now run tests

--- a/app/src/main/res/layout/activity_testrun_simple_question.xml
+++ b/app/src/main/res/layout/activity_testrun_simple_question.xml
@@ -114,7 +114,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="4pt"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView17"
