--- a/app/src/main/res/layout/activity_testrun_tf_question.xml
+++ b/app/src/main/res/layout/activity_testrun_tf_question.xml
@@ -32,15 +32,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4pt"
-                android:gravity="center"
-                android:text="@string/question"
-                android:textSize="24sp" />
-
-            <TextView
                 android:id="@+id/txt_question_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -56,6 +47,14 @@
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:padding="5dp" />
+
+            <TextView
+                android:id="@+id/txt_answer_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2pt"
+                android:gravity="center"
+                android:text="@string/unsetted" />
 
         </LinearLayout>
     </ScrollView>
