--- a/app/src/main/res/layout/recyclerview_adapter_simple_question_score.xml
+++ b/app/src/main/res/layout/recyclerview_adapter_simple_question_score.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/txt_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
