--- a/app/src/main/res/layout/recyclerview_adapter_subject.xml
+++ b/app/src/main/res/layout/recyclerview_adapter_subject.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/img_subject_icon" />
 
     <TextView
         android:id="@+id/txt_subject_description"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_subject_name" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_subject_icon"
         android:layout_width="0dp"
         android:layout_height="20pt"
         android:contentDescription="@string/subject"
