--- a/app/src/main/res/layout/recyclerview_adapter_topic.xml
+++ b/app/src/main/res/layout/recyclerview_adapter_topic.xml
@@ -16,7 +16,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/img_topic_icon" />
 
     <TextView
         android:id="@+id/txt_topic_description"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_topic_name" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img_topic_icon"
         android:layout_width="0dp"
         android:layout_height="20pt"
         android:contentDescription="@string/topic"
