--- a/app/src/main/res/layout/activity_test_panel_view.xml
+++ b/app/src/main/res/layout/activity_test_panel_view.xml
@@ -97,7 +97,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/questions_true_or_false"
                         app:layout_constraintStart_toStartOf="@+id/textView3"
-                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
                     <TextView
                         android:id="@+id/txt_amount_of_multiple_choice_questions"
@@ -121,6 +121,22 @@
                         android:layout_height="1dp"
                         android:background="?android:attr/listDivider"
                         app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/questions_multiple_options"
+                        app:layout_constraintStart_toStartOf="@+id/textView3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+                    <TextView
+                        android:id="@+id/txt_amount_of_multiple_options_questions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView24"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/textView24" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
